--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -35,7 +35,7 @@
                     <p>Deserunt ut itaque accusamus molestias et! Veritatis accusamus</p> 
                     <p>non voluptates architecto minima explicabo, ullam voluptatibus </p>
                     <p> hic voluptatum, neque at. Ipsa, quia ex.</p>
-                    <h4>Date: 03/05/2023</h4>
+                    <h4>Date: 19/11/2023</h4>
                 </section>
             </article>
             <article>
@@ -49,7 +49,7 @@
                     <p>Deserunt ut itaque accusamus molestias et! Veritatis accusamus</p> 
                     <p>non voluptates architecto minima explicabo, ullam voluptatibus </p>
                     <p> hic voluptatum, neque at. Ipsa, quia ex.</p>
-                    <h4>Date: 03/05/2023</h4>
+                    <h4>Date: 17/05/2023</h4>
                 </section>
             </article>
 
@@ -94,22 +94,22 @@
                     <p>Deserunt ut itaque accusamus molestias et! Veritatis accusamus</p> 
                     <p>non voluptates architecto minima explicabo, ullam voluptatibus </p>
                     <p> hic voluptatum, neque at. Ipsa, quia ex.</p>
-                    <h4>Date: 03/05/2023</h4>
+                    <h4>Date: 24/05/2023</h4>
                 </section>
                 
             </article>
             <article>
                 <section>
-                    <img class = "blog-image" src ="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    <img class = "blog-image" src ="https://images.unsplash.com/photo-1504805572947-34fad45aed93?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                     alt="Coding">
                 </section>
                 <section>
-                    <h3>Code</h3>
+                    <h3>Inspiration</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
                     <p>Deserunt ut itaque accusamus molestias et! Veritatis accusamus</p> 
                     <p>non voluptates architecto minima explicabo, ullam voluptatibus </p>
                     <p> hic voluptatum, neque at. Ipsa, quia ex.</p>
-                    <h4>Date: 03/05/2023</h4>
+                    <h4>Date: 01/11/2023</h4>
                 </section>
                 
             </article>
